# rag-eval-engine

./: .env.example  .gitignore  CAPABILITIES.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/documents/: page.tsx
dashboard/src/app/eval/: page.tsx
dashboard/src/app/retrieval/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/test-sets/: page.tsx
dashboard/src/components/: sidebar.tsx  skeleton.tsx  toast.tsx
dashboard/src/lib/: api.ts  utils.ts
eval_datasets/: sample_qa.json
src/: config.py  main.py  mcp_server.py
src/caching/: query_cache.py
src/db/: models.py
src/evaluation/: eval_pipeline.py  metrics.py  test_sets.py
src/generation/: cost_tracker.py  llm_client.py  prompt_builder.py
src/ingestion/: chunker.py  embedder.py  loader.py
src/retrieval/: auto_tune.py  hybrid_ranker.py  sparse_search.py  vector_search.py
src/routes/: evaluate.py  ingest.py  query.py  retrieve.py
tests/: test_api.py  test_chunker.py  test_eval_metrics.py  test_retrieval.py
